Fix image link not showing in video-container

--- a/src/css/reset.less
+++ b/src/css/reset.less
@@ -177,9 +177,15 @@ table.data-box td.num { text-align: right; }
 ul.simple-text { list-style-type: none; padding: 0px; }
 ul.simple-text li { font-size: 1rem; text-indent: 0px; padding: 0px; }
 
-// Video container
-// <figure class=video-container>
+// Video container (embedded playable, embedded link, or image link)
+// <figure class=video-container>  <!-- or class=video-container-link -->
 //    <iframe src=https://www.youtube.com/embed/jMOZOI-UkNI></iframe>
+//    <figcaption>Optional semantic tag not actually visible</figcaption>
+// </figure>
+// or
+// <figure class=video-container-link>
+//    <figcaption>Just an image link to a video</figcaption>
+//    <a href=https://example.com/some-video-page.html><img src=screenshot.jpg></a>
 // </figure>
 figure.video-container,
 figure.video-container-link {
@@ -215,6 +221,25 @@ figure.video-container-link:hover {
 figure.video-container-link:hover iframe {
    border-color: dimgray;
    }
+figure.video-container-link >figcaption:first-child {
+   position: absolute;
+   top: 10px;
+   left: 10px;
+   font-weight: normal;
+   text-align: left;
+   color: white;
+   background-color: rgba(0, 0, 0, 0.4);
+   border-radius: 4px;
+   padding: 6px 16px;
+   margin-right: 30px;
+   z-index: 100;
+   pointer-events: none;
+   }
+figure.video-container-link >a >img {
+   max-height: none;
+   border: 5px solid gray;
+   }
+
 
 // PERFECT style
 form.perfect { max-width: 25em; background-color: whitesmoke; color: dimgray; border: 1px solid; border-radius: 2px; padding: 20px; margin: 0px auto 20px auto; }
